--- a/VentasJavaMaven/VMaven/pom.xml
+++ b/VentasJavaMaven/VMaven/pom.xml
@@ -11,6 +11,35 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.ventasmaven.VentasMaven</exec.mainClass>
     </properties>
+    <build>
+    <finalName>Ventas</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>            
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>           
+                <archive>
+                    <manifest>
+                        <mainClass>com.mycompany.ventasmaven.VentasMaven</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase> 
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.netbeans.external/AbsoluteLayout -->
 <dependency>
